@@ -1,0 +1,3 @@
+.*: Assembler messages:
+.*:8: Error: Can not represent BFD_RELOC_8 relocation in this object file format
+.*:9: Error: Can not represent BFD_RELOC_8 relocation in this object file format
